--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,8 +37,8 @@ body {
 ol,
 ul {
   list-style: none;
-  padding: 5px !important;
-  margin: 0 !important;
+  /* padding: 5px !important; */
+  /* margin: 0 !important; */
 }
 blockquote,
 q {
@@ -89,4 +89,32 @@ q:after {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+}
+
+
+.modal-header{
+  border-bottom: none !important;
+}
+
+textarea:focus,
+select:focus,
+input[type="text"]:focus,
+input[type="file"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+  border-color: #4262FF !important;
+  box-shadow: 0 0.5px 0.5px rgba(0, 0, 0, 0.09) !important;
+  outline: 0 none !important;
 }
