--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -36,6 +36,7 @@
 .carousel-caption {
   top: 40% !important;
   bottom: 0;
+  z-index: 2;
 }
 .carousel-indicators{
   justify-content: end !important;
