--- a/styles/loader.css
+++ b/styles/loader.css
@@ -19,7 +19,7 @@
   display: block;
   width: 25%;
   height: 25%;
-  background-color: #4262FF;
+  background-color: #6196b2;
   border-radius: 100%;
   animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
 }
